# mcp-web-search

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  updates.txt
docker/: Dockerfile  docker-compose.yml
models/: intent_classifier.pkl
src/: __init__.py  mcp_server.py  server.py
src/config/: __init__.py  settings.py
src/search/: __init__.py  aggregator.py  cache.py  embeddings.py  extractor.py  fetcher.py  reranker.py
src/utils/: __init__.py  intent_classifier.py  llm_processor.py  normalizer.py  quality.py  semantic_search.py
