[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mcp-web-search"
version = "2.0.0"
description = "A multi-stage, AI-powered search server with embedding and reranking."
authors = ["Fouad Boutaleb <fouad@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Fouadbtlb/mcp-web-search"
repository = "https://github.com/Fouadbtlb/mcp-web-search"
keywords = ["mcp", "web-search", "ai", "semantic-search", "reranking", "docker"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Core
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.4.0"
python-dotenv = ">=1.0.0"
pydantic-settings = ">=2.0.0"
mcp = ">=1.0.0"

# AI and ML
torch = ">=2.0.0"
sentence-transformers = ">=2.2.2"
transformers = ">=4.35.0"
FlagEmbedding = ">=1.2.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"

# Content processing
httpx = ">=0.25.0"
beautifulsoup4 = ">=4.12.0"
lxml = ">=4.9.0"
html2text = ">=2020.1.16"
readability-lxml = ">=0.8.1"
langdetect = ">=1.0.9"
markdownify = ">=0.11.6"
pyppeteer = ">=1.0.2" # For JS rendering

# Caching
aiofiles = ">=23.2.1"
cachetools = ">=5.3.0"
aiosqlite = ">=0.19.0"
fake-useragent = ">=1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.9.0"
flake8 = ">=6.1.0"